--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,13 +1,13 @@
 asn1crypto==0.24.0
-cryptography==2.1.4
+cryptography>=2.1.4
 enum34==1.1.6
 http==0.2
 idna==2.6
 ipaddress==1.0.17
 keyring==10.6.0
 keyrings.alt==3.0
-pycrypto==2.6.1
+pycrypto>=2.6.1
 pyudev==0.21.0
-pyxdg==0.25
+pyxdg>=0.25
 SecretStorage==2.3.1
 six==1.11.0
